# ai-portfolio

./: .gitignore  README.md  pyproject.toml
Projects/: Handwritten Digits Image Classification.ipynb
agents/langgraph/: LangGraph Agent.ipynb
computer_science/algorithms/dynamic_programming/: fibonacci.py  knapsack.py  lcs.py  least_common_subsequence.py
computer_science/algorithms/graph/: breadth_first_search.py  depth_first_search.py  dijkstra.py
computer_science/algorithms/searching/: binary_search.py  linear_search.py
computer_science/algorithms/sorting/: bubble_sort.py  insertion_sort.py  merge_sort.py  quick_sort.py  selection_sort.py
computer_science/data_structures/: array.py  binary_search_tree.py  binary_tree.py  heap.py  linked_list.py  queue.py  stack.py
computer_science/data_structures_and_algorithms/: 1. Arrays and Strings.ipynb  10. Graphs.ipynb  11. Binary Numbers and Bit Manipulation.ipynb  2. Linked Lists.ipynb  3. Hashsets and Hashmaps.ipynb  4. Stacks and Queues.ipynb  5. Recursion.ipynb  6. Binary Search.ipynb  7. Binary Trees and Binary Search Trees.ipynb  8. Heaps and Priority Queues.ipynb  9. Sorting Algorithms.ipynb
data_engineering/kafka/: main.py
data_engineering/kafka/src/: config.py  consumer.py  producer.py
deep_learning/: Multilayer Perceptron - Handwritten Digits Image Classification.ipynb
machine_learning/deep_learning/artificial_neural_networks/: Multilayer Perceptron - Handwritten Digits Image Classification.ipynb
natural_language_processing/: Natural Language Processing.ipynb
(+39 files in other folders)
